--- a/app/src/main/res/menu/integracion.xml
+++ b/app/src/main/res/menu/integracion.xml
@@ -2,8 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:title="Sistemas de Ecuaciones"
+        app:showAsAction="never"
+        android:id="@+id/sistemasEcuaciones" />
+    <item android:title="Ecuaciones una Var"
+        android:id="@+id/solEcuaciones" />
+    <item android:title="Interpolacion"
+        android:id="@+id/interpolation" />
+    <item android:title="Integracion"
+        android:id="@+id/integration" />
 </menu>
