--- a/app/src/main/res/menu/interpolacion.xml
+++ b/app/src/main/res/menu/interpolacion.xml
@@ -12,4 +12,6 @@
         android:title="Sistemas de Ecuaciones" />
     <item android:title="Interpolacion"
         android:id="@+id/interpolation" />
+    <item android:title="Integracion"
+        android:id="@+id/integration" />
 </menu>
