--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -9,4 +9,6 @@
         android:title="Ecuaciones una Var" />
     <item android:title="Interpolacion"
         android:id="@+id/interpolation" />
+    <item android:title="Integracion"
+        android:id="@+id/integration" />
 </menu>
